# tlon-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.txt  tlon.cabal
docs/: machine.tex  machine.txt
src/: Main.hs
src/Compiler/: CoreToCode.hs
src/Core/: Core.hs  Parser.y  Scanner.x
src/Machine/: Code.hs  Eval.hs  Heap.hs  Node.hs  State.hs
src/Params/: Params.hs
src/Util/: Pretty.hs
