cabal-version:      3.0
name:               tlon
version:            0.1.0.0
synopsis:           The Tlön programming language
-- description:
license:            MIT
license-file:       LICENSE
author:             Jorge L. Martin
maintainer:         jormg82@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

executable tlon
  import:             warnings
  main-is:            Main.hs

  other-modules:      Compiler.CoreToCode
                    , Core.Core
                    , Core.Parser
                    , Core.Scanner
                    , Machine.Code
                    , Machine.Eval
                    , Machine.Heap
                    , Machine.Node
                    , Machine.State
                    , Params.Params
                    , Util.Pretty

  build-depends:      array
                    , base
                    , containers
                    , fmt
                    , monad-loops
                    , optparse-applicative
                    , transformers

  build-tool-depends: alex:alex, happy:happy

  hs-source-dirs:     src
  default-language:   Haskell2010

